playing around with the json thing

--- a/edxgraph.html
+++ b/edxgraph.html
@@ -3,7 +3,7 @@
 		<title>JSON testing</title>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
         <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
-        <script src="../dummydata.js"></script>
+        <script src="dummydata.js"></script>
 		<script src="edxgraph.js"></script>
 	</head>
 	<body>
