--- a/grade-distr.html
+++ b/grade-distr.html
@@ -10,6 +10,7 @@
         <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
         <link href="dist/css/bootstrap.min.css" rel="stylesheet">
         <link href="grade-distr.css" rel="stylesheet">
+        <script src="dummydata.js"></script>
 
     </head>
     
