--- a/grade-distr.html
+++ b/grade-distr.html
@@ -7,14 +7,14 @@
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
-        <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" />
+        <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css"/>
         <script src="jquery-ui-slider-pips-min.js"></script>
         <link rel="stylesheet" href="jquery-ui-slider-pips.css"/>
         <script src="dist/js/bootstrap.min.js"></script>
         <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
 
         <link href="dist/css/bootstrap.min.css" rel="stylesheet">
-        
+        <link href="css/bootstrap-glyphicons.css" rel="stylesheet">
         <link href="grade-distr.css" rel="stylesheet">
         <script src="dummydata.js"></script>
 
