fixed the hover issue

--- a/grade-distr.html
+++ b/grade-distr.html
@@ -12,6 +12,8 @@
         <link rel="stylesheet" href="jquery-ui-slider-pips.css"/>
         <script src="dist/js/bootstrap.min.js"></script>
         <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+        <script src="jquery.tipsy.js"></script>
+        <link rel="stylesheet" href="tipsy.css"/>
 
         <link href="dist/css/bootstrap.min.css" rel="stylesheet">
         <link href="css/bootstrap-glyphicons.css" rel="stylesheet">
