--- a/attempts_distribution.html
+++ b/attempts_distribution.html
@@ -14,7 +14,7 @@
         <link href="dist/css/bootstrap.min.css" rel="stylesheet">
         <link href="css/bootstrap-glyphicons.css" rel="stylesheet">
         <link href="attempts_distribution.css" rel="stylesheet">
-        <script src="dummydata.js"></script>
+        <script src="dataGenerator.js"></script>
 
     </head>
     
