got the bar graph of attempts looking decent

--- a/attempts_distribution.html
+++ b/attempts_distribution.html
@@ -14,6 +14,8 @@
         <link href="dist/css/bootstrap.min.css" rel="stylesheet">
         <link href="css/bootstrap-glyphicons.css" rel="stylesheet">
         <link href="attempts_distribution.css" rel="stylesheet">
+        <script src="jquery.tipsy.js"></script>
+        <link rel="stylesheet" href="tipsy.css"/>
         <script src="dataGenerator.js"></script>
 
     </head>
