now in edx format

--- a/grade-distr.html
+++ b/grade-distr.html
@@ -18,7 +18,8 @@
         <link href="dist/css/bootstrap.min.css" rel="stylesheet">
         <link href="css/bootstrap-glyphicons.css" rel="stylesheet">
         <link href="grade-distr.css" rel="stylesheet">
-        <script src="dummydata.js"></script>
+        <script src="dummymodule.js"></script>
+        <script src="studentmodule_to_mydataformat.js"></script>
 
 
     </head>
