added the formatter to format edX data

--- a/attempts_distribution.html
+++ b/attempts_distribution.html
@@ -17,6 +17,7 @@
         <script src="jquery.tipsy.js"></script>
         <link rel="stylesheet" href="tipsy.css"/>
         <script src="dataGenerator.js"></script>
+        <script src="edx-data-formatter.js"></script>
 
     </head>
     
