--- a/attempts_distribution.html
+++ b/attempts_distribution.html
@@ -3,7 +3,7 @@
 
     <head>
     
-        <title>EdX Diagonal Scatter Plot</title>
+        <title>EdX Attempts Distribution</title>
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
