now slider works in all browsers

--- a/grade-distr.html
+++ b/grade-distr.html
@@ -24,6 +24,12 @@
 
         <script src="studentmodule_to_mydataformat.js"></script>
 
+        <script>
+            var internetExplorer = false;
+            <!--[if LT IE  9]>
+            internetExplorer = true;
+            <![endif]-->
+        </script>
 
     </head>
     
